FIx build settings

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,10 +12,10 @@ frontend:
       commands:
         - npm install
     build:
-      commands: []
+      commands: npm run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: /
+    baseDirectory: public
     files:
       - '**/*'
   cache:
